Moving some resource files around

--- a/src/jbofh.properties
+++ b/src/jbofh.properties
@@ -1,4 +1,4 @@
-bofhd_url=http://127.0.0.1:8000
+bofhd_url=https://127.0.0.1:8000
 console_prompt=jbofh> 
 InternalTrustManager.enable=true
 gui.font.name.outputwindow=Courier
