--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -4,7 +4,7 @@
 log4j.rootCategory=DEBUG, A1
 
 log4j.appender.A1=org.apache.log4j.FileAppender
-log4j.appender.A1.File=jbofh_debug.log
+log4j.appender.A1.File=/tmp/jbofh_debug.log
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 
 log4j.appender.A1.layout.ConversionPattern=%-4r %-5p [%t] - %m\n
