Adds a line between the multiple commands passed in one line for the GUI GUI color parameters possible. Task #CRB-1726 - Mer lesbar 'user info' og 'person info'

--- a/src/jbofh.properties
+++ b/src/jbofh.properties
@@ -1,8 +1,10 @@
-bofhd_url=https://127.0.0.1:8000
+bofhd_url=https://cerebrum-uia.uio.no:8000
 console_prompt=jbofh> 
 InternalTrustManager.enable=true
 gui.font.name.outputwindow=Courier
 gui.font.size.outputwindow=12
+gui.background.number.outputwindow=-1
+gui.foreground.number.outputwindow=16777216
 HideRepeatedReponseHeaders=false
 # warn at 36 hours, give 10 minute terminate delay
 IdleWarnDelay=129600
