Including changes to the properties file.

--- a/src/jbofh.properties
+++ b/src/jbofh.properties
@@ -2,9 +2,17 @@ bofhd_url=https://127.0.0.1:8000
 console_prompt=jbofh> 
 InternalTrustManager.enable=true
 gui.font.name.outputwindow=Courier
-gui.font.size.outputwindow=12
-gui.background.number.outputwindow=-1
-gui.foreground.number.outputwindow=16777216
+gui.font.size.outputwindow=16
+gui.background.number.outputwindow=16777216
+gui.foreground.number.outputwindow=-1
+gui.font.name.inputwindow=Sans
+gui.font.size.inputwindow=18
+gui.background.number.inputwindow=-1
+gui.foreground.number.inputwindow=16777216
+gui.systemLookAndFeel=false
+gui.disableCombo=false
+gui.initialSize.width=700
+gui.initialSize.height=1000
 HideRepeatedReponseHeaders=false
 # warn at 36 hours, give 10 minute terminate delay
 IdleWarnDelay=129600
