change distribution directory to dist/
dist/ is more commonplace than distrib/, and .gitignore believes so too.
Instead of fixing the git ignore rule we do the reverse and amend the
build system to write distribution files to dist/.

Issue: CRB-3220

--- a/build.xml
+++ b/build.xml
@@ -5,10 +5,10 @@
         JAVACMD=/usr/lib/kaffe/bin/kaffe ant -Dbuild.compiler=kjc -Dnogui dist
         JAVACMD=/local/j2sdk1.4/bin/java ant dist
     </description>
-  <!-- set global properties for this build -->
+
   <property location="src" name="src"/>
   <property location="build" name="build"/>
-  <property location="distrib" name="dist"/>
+  <property location="dist" name="dist"/>
   <property location="tmpdist" name="tmp"/>
   <property location="javadoc" name="doc"/>
 
